--- a/index.html
+++ b/index.html
@@ -186,18 +186,18 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Immerse yourself in luxury at The Arki Villa, a tropical 2-bedroom haven in Batu Bolong, Canggu, endorsed by Love Bali Villas. Experience tranquility, sophistication, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #TheArkiVilla #CangguLuxury #LoveBaliVillasRecommendation
+            Immerse yourself in luxury at <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a>, a tropical 2-bedroom haven in Batu Bolong, Canggu, endorsed by Love Bali Villas. Experience tranquility, sophistication, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #TheArkiVilla #CangguLuxury #LoveBaliVillasRecommendation
 
           </p>
 <p> 
-  Nestled within the vibrant hub of Batu Bolong in Canggu, The Arki Villa invites you to immerse yourself in a world of luxury where tropical beauty meets refined elegance. As a stunning villa endorsed by Love Bali Villas, The Arki Villa offers an escape that flawlessly combines tranquility, sophistication, and personalized service. Join us as we explore the allure of The Arki Villa, a sanctuary that captures the essence of contemporary luxury.
+  Nestled within the vibrant hub of Batu Bolong in Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> invites you to immerse yourself in a world of luxury where tropical beauty meets refined elegance. As a stunning villa endorsed by Love Bali Villas, The Arki Villa offers an escape that flawlessly combines tranquility, sophistication, and personalized service. Join us as we explore the allure of <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a>, a sanctuary that captures the essence of contemporary luxury.
 
 </p>
 <p>
-  Our team at Love Bali Villas had the privilege of experiencing the magic of The Arki Villa firsthand, and we are excited to share our endorsement of this exceptional property. From the moment we arrived, we were captivated by the seamless blend of tropical aesthetics and modern design.
+  Our team at Love Bali Villas had the privilege of experiencing the magic of <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> firsthand, and we are excited to share our endorsement of this exceptional property. From the moment we arrived, we were captivated by the seamless blend of tropical aesthetics and modern design.
 
 </p>
-<p> The Arki Villa exudes an ambiance of understated luxury that promises an unforgettable stay. Every facet of this villa has been thoughtfully curated to create an environment that effortlessly merges the natural allure of its surroundings with contemporary elegance. Whether you're lounging by the pool, relishing gourmet delicacies, or simply enjoying the serenity of the environment, The Arki Villa provides an experience that is both rejuvenating and lavish.
+<p> The Arki Villa exudes an ambiance of understated luxury that promises an unforgettable stay. Every facet of this villa has been thoughtfully curated to create an environment that effortlessly merges the natural allure of its surroundings with contemporary elegance. Whether you're lounging by the pool, relishing gourmet delicacies, or simply enjoying the serenity of the environment, <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> provides an experience that is both rejuvenating and lavish.
 
 </p>
 <p> The elegantly appointed accommodations provide an oasis of comfort and style. Each room within the villa presents a private haven where you can fully immerse yourself in relaxation and contemporary elegance. Imagine waking up to the gentle sounds of nature and beginning your day in an atmosphere that radiates serenity.
@@ -206,7 +206,7 @@
 <p> The meticulously designed accommodations offer a haven of comfort and style. Each room within the villa offers a private sanctuary where you can fully embrace relaxation and modern sophistication. Imagine waking up to the gentle rustle of leaves and commencing your day in an atmosphere that radiates tranquility.
 
 </p>
-<p> A highlight of The Arki Villa is its collaboration with Expedia, ensuring a seamless booking process and dedicated service during your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and The Arki Villa embodies this commitment wholeheartedly.
+<p> A highlight of <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> is its collaboration with Expedia, ensuring a seamless booking process and dedicated service during your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and The Arki Villa embodies this commitment wholeheartedly.
 
 </p>
 
