--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> The Arki Villa - Love Bali Villas Blogs</title>
-  <meta content="" name="The Arki Villa: Discover Luxury in a Tropical 2-Bedroom Retreat in Batu Bolong Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Immerse yourself in luxury at The Arki Villa, a tropical 2-bedroom haven in Batu Bolong, Canggu, endorsed by Love Bali Villas. Experience tranquility, sophistication, and personalized service.   ">
+  <title> Musik Villa Canggu - Love Bali Villas Blogs</title>
+  <meta content="" name="Musik Villa Canggu: Unveiling Luxury in a Stunning Villa Oasis Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Immerse yourself in opulence at Musik Villa Canggu, a luxury villa in the heart of Canggu, endorsed by Love Bali Villas. Experience tranquility, elegance, and personalized service.   ">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-32x32.png" rel="icon">
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,11 +99,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>  The Arki Villa: Discover Luxury in a Tropical 2-Bedroom Retreat in Batu Bolong Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2>  Musik Villa Canggu: Unveiling Luxury in a Stunning Villa Oasis Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> The Arki Villa </li>
+            <li> Musik Villa Canggu </li>
           </ol>
         </div>
 
@@ -121,43 +121,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/1.jpg" alt="">
+                  <img src="assets/img/musik/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/2.jpg" alt="">
+                  <img src="assets/img/musik/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/3.jpg" alt="">
+                  <img src="assets/img/musik/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/4.jpg" alt="">
+                  <img src="assets/img/musik/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/5.jpg" alt="">
+                  <img src="assets/img/musik/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/6.jpg" alt="">
+                  <img src="assets/img/musik/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/7.jpg" alt="">
+                  <img src="assets/img/musik/7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/8.jpg" alt="">
+                  <img src="assets/img/musik/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/9.jpg" alt="">
+                  <img src="assets/img/musik/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/arki/10.jpg" alt="">
+                  <img src="assets/img/musik/10.jpg" alt="">
                 </div>
 
               </div>
@@ -167,16 +167,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> The Arki Villa Information</h3>
+              <h3> Musik Villa Canggu Information</h3>
               <ul>
-                <li><strong>Property highlights:</strong> An outdoor pool and free self parking are available at this smoke-free villa. The villa boasts a private pool and offers free WiFi and a kitchen. For a bit of entertainment, a Smart TV comes with digital channels, and guests can also appreciate conveniences like 2 bathrooms and a refrigerator.  </li>
-                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, Laundry & Housekeeping </li>
+                <li><strong>Property highlights:</strong> This villa is located in Padonan, a neighborhood in Canggu, and is near theme parks. The area's natural beauty can be seen at Seminyak Beach and Legian Beach. Splash Waterpark Bali and Waterbom Bali are also worth visiting.  </li>
+                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, & Laundry </li>
                 <li><strong>Explore Area:</strong> </li> 
                 <p> Eat Street - 6 min walk </p>
-                 <p> Berawa Beach - 6 min drive </p>
-                 <p> Echo Beach - 10 min drive </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 49 min drive </p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">Check The Availablity</a></li>
+                 <p> Seminyak Square - 9 min drive</p>
+                 <p> Seminyak Beach - 14 min drive </p>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 45 min drive </p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -186,27 +186,31 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Immerse yourself in luxury at <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a>, a tropical 2-bedroom haven in Batu Bolong, Canggu, endorsed by Love Bali Villas. Experience tranquility, sophistication, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #TheArkiVilla #CangguLuxury #LoveBaliVillasRecommendation
+            Immerse yourself in opulence at <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a>, a luxury villa in the heart of Canggu, endorsed by Love Bali Villas. Experience tranquility, elegance, and personalized service. Book confidently through our partnership with Expedia for an unforgettable getaway. #MusikVillaCanggu #CangguLuxury #LoveBaliVillasRecommendation
 
           </p>
 <p> 
-  Nestled within the vibrant hub of Batu Bolong in Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> invites you to immerse yourself in a world of luxury where tropical beauty meets refined elegance. As a stunning villa endorsed by Love Bali Villas, The Arki Villa offers an escape that flawlessly combines tranquility, sophistication, and personalized service. Join us as we explore the allure of <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a>, a sanctuary that captures the essence of contemporary luxury.
+  Nestled within the vibrant neighborhood of Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a> beckons you to experience a realm of opulence where tranquility merges with sophisticated elegance. As an exquisite villa endorsed by Love Bali Villas, Musik Villa Canggu promises an escape that effortlessly combines relaxation, luxury, and personalized service. Join us as we delve into the allure of <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a>, a sanctuary that epitomizes contemporary refinement.
 
 </p>
 <p>
-  Our team at Love Bali Villas had the privilege of experiencing the magic of <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> firsthand, and we are excited to share our endorsement of this exceptional property. From the moment we arrived, we were captivated by the seamless blend of tropical aesthetics and modern design.
+  Our team at Love Bali Villas had the pleasure of immersing ourselves in the splendor of <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a>, and we are delighted to extend our endorsement of this exceptional property. From the moment we stepped inside, we were enchanted by the seamless fusion of modern design and serene surroundings.
 
 </p>
-<p> The Arki Villa exudes an ambiance of understated luxury that promises an unforgettable stay. Every facet of this villa has been thoughtfully curated to create an environment that effortlessly merges the natural allure of its surroundings with contemporary elegance. Whether you're lounging by the pool, relishing gourmet delicacies, or simply enjoying the serenity of the environment, <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> provides an experience that is both rejuvenating and lavish.
+<p> Musik Villa Canggu exudes an aura of refined luxury that guarantees an unparalleled stay. Every aspect of the villa has been thoughtfully curated to create an environment that effortlessly marries the contemporary elegance of its interiors with the natural beauty of its surroundings. Whether you're lounging by the pool, indulging in gourmet delights, or simply absorbing the peaceful atmosphere, <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a> offers an experience that is both rejuvenating and lavish.
 
 </p>
-<p> The elegantly appointed accommodations provide an oasis of comfort and style. Each room within the villa presents a private haven where you can fully immerse yourself in relaxation and contemporary elegance. Imagine waking up to the gentle sounds of nature and beginning your day in an atmosphere that radiates serenity.
+<p> The elegantly appointed accommodations provide a haven of comfort and style. Each room within the villa offers a private oasis where you can fully immerse yourself in relaxation and contemporary luxury. Imagine waking up to the sounds of nature and starting your day in an environment that radiates serenity.
 
 </p>
-<p> The meticulously designed accommodations offer a haven of comfort and style. Each room within the villa offers a private sanctuary where you can fully embrace relaxation and modern sophistication. Imagine waking up to the gentle rustle of leaves and commencing your day in an atmosphere that radiates tranquility.
+<p> A notable highlight of <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a> is its partnership with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is dedicated to endorsing properties that prioritize guest satisfaction, and Musik Villa Canggu exemplifies this dedication wholeheartedly.
 
 </p>
-<p> A highlight of <a href="https://expedia.com/affiliates/lovebalivillas/arki-villa" target="_blank">The Arki Villa</a> is its collaboration with Expedia, ensuring a seamless booking process and dedicated service during your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and The Arki Villa embodies this commitment wholeheartedly.
+<p> Set amidst the cultural charm of Canggu, <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a> invites you to experience the perfect blend of modern luxury and serene surroundings. With its exceptional amenities, attentive staff, and contemporary design, this villa offers an unforgettable and rejuvenating retreat.
+
+</p>
+<p>
+  Indulge in the allure of <a href="https://expedia.com/affiliates/lovebalivillas/musik-villa-canggu" target="_blank">Musik Villa Canggu</a>, a sanctuary that promises a world where luxury and tranquility harmoniously coexist. Book your stay today and embark on a journey of relaxation and sophistication.
 
 </p>
 
