--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Besso Villa - Love Bali Villas Blogs</title>
-  <meta content="" name="Besso Villa: A Luxurious 1-Bedroom Villa in Umalas Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Immerse yourself in opulence at Besso Villa, a 1-bedroom luxury haven in Umalas, recommended by Love Bali Villas. Experience tranquility, indulgence, and personalized service.   ">
+  <title> Adamare Villa Umalas - Love Bali Villas Blogs</title>
+  <meta content="" name="Adamare Villa Umalas: A 3-Bedroom Haven in Umalas Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Immerse yourself in luxury at Adamare Villa Umalas, a 3-bedroom haven in Umalas, recommended by Love Bali Villas. Discover tranquility, opulence, and personalized service. Book your exceptional retreat with confidence through our partnership with Expedia. #AdamareVillaUmalas #LuxuryGetaway #LoveBaliVillasRecommendation   ">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-32x32.png" rel="icon">
@@ -84,7 +84,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,11 +99,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2> Besso Villa: A Luxurious 1-Bedroom Villa in Umalas Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2> Adamare Villa Umalas: A 3-Bedroom Haven in Umalas Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Besso Villa </li>
+            <li> Adamare Villa Umalas </li>
           </ol>
         </div>
 
@@ -121,43 +121,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/1.jpg" alt="">
+                  <img src="assets/img/blog/ada/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/2.jpg" alt="">
+                  <img src="assets/img/blog/ada/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/3.jpg" alt="">
+                  <img src="assets/img/blog/ada/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/4.jpg" alt="">
+                  <img src="assets/img/blog/ada/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/5.jpg" alt="">
+                  <img src="assets/img/blog/ada/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/6.jpg" alt="">
+                  <img src="assets/img/blog/ada/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/7.jpg" alt="">
+                  <img src="assets/img/blog/ada/7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/8.jpg" alt="">
+                  <img src="assets/img/blog/ada/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/9.jpg" alt="">
+                  <img src="assets/img/blog/ada/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/besso/10.jpg" alt="">
+                  <img src="assets/img/blog/ada/10.jpg" alt="">
                 </div>
 
               </div>
@@ -167,16 +167,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Besso Villa Information</h3>
+              <h3> Adamare Villa Umalas Information</h3>
               <ul>
-                <li><strong>Property highlights:</strong> This villa features an outdoor pool, free self parking, and free WiFi in public areas. The villa offers air conditioning and daily housekeeping.  </li>
-                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning, & Laundry </li>
+                <li><strong>Property highlights:</strong> This villa is located in Umalas, a neighborhood in Kerobokan, and is on the Strip. The area's natural beauty can be seen at Seminyak Beach and Kuta Beach. Splash Waterpark Bali and Waterbom Bali are also worth visiting.  </li>
+                <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning. </li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Splash Waterpark Bali -  3 min drive </p>
-                 <p> Berawa Beach - 4 min drive </p>
-                 <p> Seminyak Beach - 10 min drive </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 38 min drive </p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Check The Availablity</a></li>
+                <p> Seminyak Square - 6 min drive </p>
+                 <p> Splash Waterpark Bali -  7 min drive </p>
+                 <p> Seminyak Beach - 12 min drive </p>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 33 min drive </p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -186,31 +186,31 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Immerse yourself in opulence at <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Besso Villa</a>, a 1-bedroom luxury haven in Umalas, recommended by Love Bali Villas. Experience tranquility, indulgence, and personalized service. Book your serene escape with confidence through our partnership with Expedia. #BessoVillaUmalas #LuxuryRetreat #LoveBaliVillasRecommendation
+            Immerse yourself in luxury at <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a> , a 3-bedroom haven in Umalas, recommended by Love Bali Villas. Discover tranquility, opulence, and personalized service. Book your exceptional retreat with confidence through our partnership with Expedia. #AdamareVillaUmalas #LuxuryGetaway #LoveBaliVillasRecommendation
 
           </p>
 <p> 
-  Tucked away in the serene oasis of Umalas, <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Besso Villa</a> awaits to immerse you in a realm of lavish luxury and tranquility. As a lavish 1-bedroom villa endorsed by Love Bali Villas, Besso Villa promises an escape that seamlessly combines relaxation, indulgence, and impeccable personalized service. Join us as we unravel the allure of this exceptional villa, a sanctuary that embodies the pinnacle of modern elegance.
+  Nestled within the serene embrace of Umalas, <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a> invites you to embark on a journey of pure luxury, where tranquility meets lavish indulgence. As a splendid 3-bedroom villa endorsed by Love Bali Villas, Adamare Villa offers an escape that seamlessly combines relaxation, opulence, and impeccable personalized service. Join us as we delve into the allure of this remarkable villa, a sanctuary that embodies the epitome of modern refinement.
 
 </p>
 <p>
-  Our team at Love Bali Villas had the privilege of indulging in the splendor of <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Besso Villa</a>, and we are delighted to extend our endorsement of this remarkable property. From the moment we stepped into the villa, we were captivated by the harmonious blend of contemporary design and the peaceful natural surroundings.
+  Our team at Love Bali Villas had the privilege of immersing ourselves in the elegance of <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a>, and we are excited to extend our endorsement of this exceptional property. From the moment we stepped foot into the villa, we were captivated by the harmonious blend of contemporary design and the serene surroundings.
 
 </p>
-<p> Besso Villa radiates an aura of opulent luxury that ensures an unforgettable stay. Every element of the villa has been thoughtfully designed to create an environment that effortlessly marries the modern elegance of its interiors with the serene beauty of its surroundings. Whether you're lounging by the private pool, savoring exquisite culinary delights, or simply soaking in the tranquil ambiance, <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Besso Villa</a> offers an experience that is both rejuvenating and extravagant.
+<p> Adamare Villa exudes an ambiance of opulent luxury that ensures an unforgettable stay. Every aspect of the villa has been thoughtfully curated to create an environment that effortlessly marries the modern elegance of its interiors with the tranquil beauty of its surroundings. Whether you're lounging by the private pool, indulging in gourmet delicacies, or simply soaking in the peaceful atmosphere, <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a> offers an experience that is both rejuvenating and extravagant.
 
 </p>
-<p> The exquisitely appointed 1-bedroom suite provides a haven of comfort and style. The private retreat within the villa offers an oasis of serenity, where you can fully immerse yourself in relaxation and modern opulence. Imagine waking up to the gentle sounds of nature and starting your day in an environment that exudes tranquility.
+<p> The exquisitely appointed 3-bedroom accommodations provide havens of comfort and style. Each private suite within the villa offers an oasis of serenity, allowing you to fully immerse yourself in relaxation and modern opulence. Imagine waking up to the gentle whispers of nature and commencing your day in an environment that exudes tranquility.
 
 </p>
-<p> An exceptional aspect of Besso Villa is its seamless partnership with Expedia, ensuring a seamless booking process and dedicated service throughout your stay. Love Bali Villas is committed to endorsing properties that prioritize guest satisfaction, and Besso Villa embodies this commitment wholeheartedly.
+<p> A highlight of Adamare Villa is its seamless partnership with Expedia, ensuring a smooth booking process and dedicated service throughout your stay. Love Bali Villas prioritizes endorsing properties that prioritize guest satisfaction, and <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a> exemplifies this commitment wholeheartedly.
 
 </p>
-<p> Nestled within the peaceful setting of Umalas, <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Besso Villa</a> invites you to experience the perfect fusion of luxury and tranquility. With its exceptional amenities, attentive staff, and contemporary design, this villa offers an escape that promises a harmonious blend of relaxation and sophistication.
+<p> Set against the serene backdrop of Umalas, <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a> invites you to experience the perfect balance of luxury and tranquility. With its exceptional amenities, attentive staff, and contemporary design, this villa promises an escape that seamlessly blends relaxation and sophistication.
 
 </p>
 <p>
-  Nestled within the peaceful setting of Umalas, <a href="https://expedia.com/affiliates/lovebalivillas/besso-villa" target="_blank">Besso Villa</a> invites you to experience the perfect fusion of luxury and tranquility. With its exceptional amenities, attentive staff, and contemporary design, this villa offers an escape that promises a harmonious blend of relaxation and sophistication.
+  Indulge in the allure of <a href="https://expedia.com/affiliates/lovebalivillas/adamare-villa-umalas" target="_blank">Adamare Villa Umalas</a>, a sanctuary that guarantees an experience where luxury and tranquility intertwine seamlessly. Book your stay today and embark on a journey of opulence and rejuvenation.
 
 </p>
 
