--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Allegra Villa - Love Bali Villas Blogs</title>
-  <meta content="" name="Allegra Villa: Your Idyllic Getaway in Nusa Dua Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Indulge in lavish serenity at Allegra Villa, a luxurious 2-bedroom haven in Nusa Dua. Recommended by Love Bali Villas and proudly an Expedia Partner, escape to paradise and immerse yourself in unmatched opulence.
+  <title> Villa Balik Seminyak - Love Bali Villas Blogs</title>
+  <meta content="" name="Villa Balik 1 Bedroom Private Villa in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Discover pure indulgence at Villa Balik Seminyak, an elegant 1-bedroom sanctuary recommended by Love Bali Villas and proudly partnered with Expedia. 
   ">
 
   <!-- Favicons -->
@@ -85,7 +85,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -100,11 +100,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2> Allegra Villa: Your Idyllic Getaway in Nusa Dua Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2> Villa Balik Seminyak 1 Bedroom Private Villa in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Allegra Villa </li>
+            <li> Villa Balik Seminyak </li>
           </ol>
         </div>
 
@@ -122,7 +122,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/1.jpg" alt="">
+                  <img src="assets/img/blog/Balik/" alt="">
                 </div>
 
                 <div class="swiper-slide">
